--- a/ProjetoMVCCusoNelio/appsettings.json
+++ b/ProjetoMVCCusoNelio/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ProjetoMVCCusoNelioContext": "Server=(localdb)\\mssqllocaldb;Database=ProjetoMVCCusoNelioContext-a3add612-28d9-4043-b8d5-1fa3cf1f8fbf;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
